# .github

./: .cursorrules  .env.gmail.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  requirements-onepassword.txt
.devcontainer/: devcontainer.json  install-op-cli.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
ai-orchestrator/: main.py  requirements.txt
docs/: AWS_GITHUB_OIDC_SSM.md  AWS_SSM_WEADU_STANDARD.md  BRAVE_SEARCH_API_WEA22.md  CHARTE_AGENTS_LINEAR_WEA17.md  GITHUB_BRANCH_PROTECTION_WEA32.md  GITHUB_CI_FAILURE_ALERT.md  GITHUB_LINEAR_INVENTORY_WEA12.md  GITHUB_SELF_HOSTED_RUNNER.md  GMAIL_AGENTS_WEA24.md  GOOGLE_ADS_ANALYTICS_API_WEA21.md  GOOGLE_OAUTH_WEA20.md  INTERACTIVE_BROKERS_UK_WEA30.md  NOTIFICATIONS_EMAIL_SLACK_WEA19.md  ONEPASSWORD_AGENTS.md  SCRAPING_DECODO_SCRAPERAPI_ZYTE_WEA23.md  SECRETS_CARTOGRAPHIE_WEA14.md  SECRETS_SOCLE_WEA15.md  SLACK_APP_AGENTS_WEA25.md  WEA-177-ai-orchestrator-configuration.md  WEA-18-llm-routing-cost.md  WEA-26-n8n-hebergement.md  WEA-31-n8n-human-email-queue.md  ZERO_HUMAN_AUTOMATION_LINEAR.md
scripts/: ai_orchestrator_daily_cost_report.py  aws_github_oidc_probe.sh  aws_inventory_wea29.py  brave_search_smoke_wea22.py  cos_push_from_windows.ps1  cursor_secret_scan_pre_commit.sh  (+22 more)
templates/pd-detection-app/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
templates/pd-detection-app/.github/workflows/: ci.yml
templates/pd-detection-app/src/pd_detection/: app.py  cli.py
templates/pd-detection-app/tests/: test_health.py
(+116 files in other folders)
